Changed sidebar word-break to break-word

--- a/resume-mooneyhan.html
+++ b/resume-mooneyhan.html
@@ -30,7 +30,8 @@
       color: white;
       padding: 0 1rem;
       width: 200px;
-      word-break: keep-all;
+      word-break: break-word;
+      flex: 0 0 180px;
     }
 
     .sidebar * {
