--- a/resume-mooneyhan.html
+++ b/resume-mooneyhan.html
@@ -29,7 +29,7 @@
       background: linear-gradient(hsl(208, 100%, 23%), hsl(208, 100%, 18%));
       color: white;
       padding: 0 1rem;
-      width: 200px;
+      min-width: 190px;
       word-break: break-word;
       flex: 0 0 180px;
     }
@@ -105,6 +105,8 @@
     <p>connmoo@gmail.com</p>
     <h3>Phone</h3>
     <p>(850) 509-2322</p>
+    <h3>Personal Website</h3>
+    <p>https://connormooneyhan.com</p>
     <h3>GitHub</h3>
     <p>https://github.com/ConnorMooneyhan</p>
     <h3>LinkedIn</h3>
