Make github a link and change order of skills

--- a/resume-mooneyhan.html
+++ b/resume-mooneyhan.html
@@ -56,25 +56,25 @@
 <body>
   <header>
     <h1>Connor Mooneyhan</h1>
-    <p>5403 Friendly Manor Dr., Apt. A, Greensboro, NC 27410 | (850) 509-2322 | connmoo@gmail.com | https://github.com/ConnorMooneyhan</p>
+    <p>5403 Friendly Manor Dr., Apt. A, Greensboro, NC 27410 | (850) 509-2322 | connmoo@gmail.com | <a href="https://github.com/ConnorMooneyhan" target="_blank">https://github.com/ConnorMooneyhan</a></p>
   </header>
   <main>
     <!-- SKILLS -->
     <section>
       <h2 class="section__title">Skills</h2>
       <ul class="skills-list">
-        <li>React</li>
         <li>JS / TS</li>
+        <li>React</li>
         <li>SASS</li>
+        <li>HTML5 / CSS3</li>
         <li>Git / GitHub</li>
-        <li>Rust</li>
         <li>WordPress</li>
         <li>PHP</li>
-        <li>HTML5 / CSS3</li>
-        <li>REST</li>
         <li>Linux</li>
+        <li>Rust</li>
         <li>GitHub Projects</li>
         <li>Open Source</li>
+        <li>REST</li>
       </ul>
     </section>
     <!-- RELEVANT WORK EXPERIENCE -->
