--- a/resume-mooneyhan.html
+++ b/resume-mooneyhan.html
@@ -84,8 +84,8 @@
         <h3 class="section__item__heading">Departmental Secretary</h3>
         <h4><em>Cone Health, Offsite Distribution Center, Greensboro, NC</em></h4>
         <ul>
-          <li>Developed query generation tool that enabled easier access to vital departmental data.</li>
-          <li>Created and maintained data-collection tools that demonstrated a need for a larger workforce, leading to the hiring of 3 new employees.</li>
+          <li>Developed query generation tool using JavaScript that enabled easier access to vital departmental data.</li>
+          <li>Created and maintained data-collection tools in Microsoft Excel that demonstrated a need for a larger workforce, leading to the hiring of 3 new employees.</li>
           <li>Improved department-wide understanding of Voxware software after careful examination of documentation.</li>
         </ul>
       </div>
