--- a/resume-mooneyhan.html
+++ b/resume-mooneyhan.html
@@ -56,30 +56,47 @@
 <body>
   <header>
     <h1>Connor Mooneyhan</h1>
-    <p>5403 Friendly Manor Dr., Apt. A, Greensboro, NC 27410 | (850) 509-2322 | connmoo@gmail.com | <a href="https://github.com/ConnorMooneyhan" target="_blank">https://github.com/ConnorMooneyhan</a></p>
+    <p>Durham, NC | (850) 509-2322 | connmoo@gmail.com | <a href="https://github.com/ConnorMooneyhan" target="_blank">https://github.com/ConnorMooneyhan</a></p>
   </header>
   <main>
     <!-- SKILLS -->
     <section>
       <h2 class="section__title">Skills</h2>
       <ul class="skills-list">
-        <li>JS / TS</li>
-        <li>React</li>
-        <li>SASS</li>
+        <li>JS / TS / React</li>
+        <li>Next.js</li>
+        <li>Material UI (MUI)</li>
+        <li>Chakra UI</li>
         <li>HTML5 / CSS3</li>
         <li>Git / GitHub</li>
-        <li>WordPress</li>
-        <li>PHP</li>
-        <li>Linux</li>
+        <li>JIRA / BitBucket</li>
+        <li>Prismic</li>
+        <li>Bash</li>
+        <li>Linux / UNIX</li>
         <li>Rust</li>
-        <li>GitHub Projects</li>
-        <li>Webpack</li>
-        <li>REST</li>
+        <li>Vim / NeoVim</li>
       </ul>
     </section>
     <!-- RELEVANT WORK EXPERIENCE -->
     <section>
       <h2 class="section__title">Relevant Work Experience</h2>
+      <div class="section__item">
+        <h3 class="section__item_heading">Associate Front End Developer</h3>
+        <h4><em>Atlantic BT, Raleigh, NC (Remote) | February 2022 - Present</em></h4>
+        <ul>
+          <li>Built static Single Page Application with authentication, role-based authorization, and client-side data fetching using Next.js and Material UI.</li>
+          <li>Used Figma designs to create static marketing website leveraging Prismic, Next.js, and Chakra UI.</li>
+          <li>Identified bottlenecks in application performance and implemented robust fixes to improve site load speed by over 300%.</li>
+            <!--
+                self-hosted fonts,
+                lazy-loaded images,
+                requested right-sized images using srcset and sizes HTML properties,
+                prevented video preloading,
+                implemented Prismic's nested (child - parent) routing system
+            -->
+          <li>Improved Google Maps component performance by 600%.</li>
+        </ul>
+      </div>
       <div class="section__item">
         <h3 class="section__item__heading">Departmental Secretary</h3>
         <h4><em>Cone Health, Offsite Distribution Center, Greensboro, NC</em></h4>
@@ -114,18 +131,6 @@
       <div class="section__item">
         <h3 class="section__item__heading">Associate of Arts</h3>
         <h4><em>Tallahassee Community College, Tallahassee, FL</em></h4>
-      </div>
-    </section>
-    <!-- PROJECTS -->
-    <section>
-      <h2 class="section__title">Projects</h2>
-      <div class="section__item">
-        <h3>Pong &#149 <span class="repo-link"><a href="https://github.com/ConnorMooneyhan/pong" target="_blank"><em>https://github.com/ConnorMooneyhan/pong</em></a></span></h3>
-        <p>Utilizes the Canvas API to implement a classic game of Pong in the browser.</p>
-      </div>
-      <div class="section__item">
-        <h3>Cellular Automata &#149 <span class="repo-link"><a href="https://github.com/ConnorMooneyhan/cellular-automata" target="_blank"><em>https://github.com/ConnorMooneyhan/cellular-automata</em></a></span></h3>
-        <p>Customizable tool for visualizing basic cellular automata. The "Favorites" section of this app demonstrates CRUD capabilities.</p>
       </div>
     </section>
   </main>
